--- a/sass/mobile-style.scss
+++ b/sass/mobile-style.scss
@@ -263,12 +263,94 @@ body {
 .item-few-people .feature__title {
   margin-top: 0;
 }
-
-
-
-
-
-
+.search {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 30px;
+}
+.search__title {
+  font-size: 21px;
+  margin: 0;
+}
+.search__text {
+  font-size: 14px;
+  margin-top: 20px;
+  line-height: 26px;
+}
+.search__btn {
+  text-decoration: none;
+  font-size: 21px;
+  line-height: 63px;
+  font-weight: 700;
+  color: $white;
+  display: block;
+  width: 280px;
+  height: 58px;
+  background-color: $blue;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+.search__btn:hover {
+  background-color: $blue_hover;
+}
+.search__btn:active {
+  background-color: $blue_down;
+  color: #87b6d1;
+}
+.main-footer {
+  text-align: center;
+  margin-top: 40px;
+}
+.footer__title {
+  text-transform: uppercase;
+  font-size: 21px;
+  margin: 0;
+  margin-bottom: 40px;
+}
+.footer__social {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.social__item a {
+  display: block;
+  width: 47px;
+  height: 47px;
+  background-color: $blue;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-right: 6px;
+}
+.twitter a {
+  background-image: url("../img/icon-twitter.png");
+}
+.fb a {
+  background-image: url("../img/icon-facebook.png");
+}
+.youtube a {
+  background-image: url("../img/icon-youtube.png");
+}
+.social__item a:hover {
+  background-color: $blue_hover;
+}
+.social__item a:active {
+  background-color: $blue_down;
+}
+.footer__copyright {
+  margin-top: 25px;
+  text-align: left;
+  padding-top: 10px;
+  padding-left: 70px;
+  padding-bottom: 15px;
+  text-transform: uppercase;
+  font-size: 14px;
+  background-image: url("../img/htmlacademy.png");
+  background-repeat: no-repeat;
+  background-position-x: 172px;
+  background-position-y: 15px;
+}
 
 
 
